--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -1,7 +1,8 @@
 .nav {
     margin: 0 auto;
     font-size: 15px;
-    width: 60%;
+    width: 100%;
+    height: 100%;
     border: 1px solid black;
     }
   .li {
